@@ -1,4 +1,0 @@
-#!/bin/bash
-
-ssh ensarm00 "cd /opt/materials-studio612/LicensePack/linux/bin && ./lmreread -c /opt/materials-studio612/LicensePack/Licenses/enssvls1_213076.4.3491.txt"
-
