@@ -1,49 +1,0 @@
-#!/bin/bash
-#
-# opens a file depending on its type
-
-# TODO use dynamic lists, i.e. system standards and file associations
-
-killchildren(){
-  kill `jobs -p`
-}
-
-trap killchildren INT
-trap killchildren KILL
-trap killchildren TERM
-
-open_file(){
-  filename="$1"
-  dir=`dirname "$filename"`
-  base=`basename "$filename"`
-  ext="${base##*.}"
-  [ "$ext" == "$base" ] && ext=""
-
-  [ ! -f "$filename" ] && echo "$1 is not a file" >&2 && exit 1
-
-  case "$ext" in
-    txt)  emacs "$filename"  ;;
-    md)  emacs "$filename"  ;;
-    html)  emacs "$filename"  ;;
-    sh) emacs "$filename" ;;
-    tex) emacs "$filename" ;;
-    pdf)  evince "$filename"  ;;
-    ps)  evince "$filename"  ;;
-    dvi)  evince "$filename"  ;;
-    jpg)  sxiv "$filename"  ;;
-    bmp)  sxiv "$filename"  ;;
-    png)  sxiv "$filename"  ;;
-    gif)  sxiv "$filename"  ;;
-    xyz)  pymol -x "$filename"  ;;
-    "") echo "no file extension: $filename" ;;
-    *)  echo "unknown file extension: $ext" >&2 ;;
-  esac
-}
-
-while [ -n "$1" ]; do
-  open_file "$1" &
-  shift
-done
-
-wait
-
