@@ -2,5 +2,6 @@
 #
 
 export DISPLAY=:0
+export XAUTHORITY=~/.Xauthority
 xclock
 
